--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
             <header>
                 <div class="navbar navbar-dark bg-dark shadow-sm">
                     <div class="container d-flex justify-content-between">
-                        <a href="{{ path('homepage') }}" class="navbar-brand d-flex align-items-center">
+                        <a href="" class="navbar-brand d-flex align-items-center">
                             <strong>Digitalendar</strong>
                         </a>
                         <nav class="my-2 my-md-0">
