--- a/templates/event/edit.html.twig
+++ b/templates/event/edit.html.twig
@@ -5,9 +5,7 @@
 {% block body %}
     <h1>Edit Event</h1>
 
-    {{ include('event/_form.html.twig', {'button_label': 'Update'}) }}
-
+    {{ include('event/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     <a href="{{ path('event_index') }}">back to list</a>
-
     {{ include('event/_delete_form.html.twig') }}
 {% endblock %}
