--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -26,7 +26,12 @@
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="btn-group">
                                                 <a href="{{ path('event_show', {'slug': event.slug}) }}" class="btn btn-sm btn-outline-secondary">Voir</a>
-                                                <a href="{{ path('event_edit', {'slug': event.slug})  }}" class="btn btn-sm btn-outline-secondary">Modifier</a>
+
+                                                {% if app.user == event.user or is_granted('ROLE_ADMIN')%}
+                                                    <a href="{{ path('event_edit', {"slug": event.slug }) }}" class="btn btn-sm btn-outline-secondary">Modifier</a>
+                                                {% else%}
+
+                                                {% endif %}
                                             </div>
                                             <small class="text-muted">{{ event.city }} - {{ event.dateStart | date ('d') }} | {{ event.dateEnd |date ('d-m-Y' ) }}</small>
                                         </div>
