--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,12 +15,17 @@
                         </a>
                         <nav class="my-2 my-md-0">
                             <a class="p-2 text-white" href="{{ path('event_index') }}">Les événements</a>
-                            <a class="p-2 text-white" href="{{ path('event_new') }}">Proposer un événement</a>
 
                             {% if app.user %}
-                                <a class="p-2 text-white" href="account.html">Mon compte</a>
+                                <a class="p-2 text-white" href="{{ path('event_new') }}">Proposer un événement</a>
+                                <a class="p-2 text-white" href="{{ path('account') }}">Mon compte</a>
                                 <a class="p-2 text-white" href="{{ path('app_logout') }}">Déconnexion</a>
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <a class="p-2 text-white" href="{{ path('easyadmin') }}">Admin</a>
+                                {% else %}
+                                {% endif %}
                             {% else %}
+                                <a class="p-2 text-white" href="{{ path('app_login') }}">Proposer un événement</a>
                                 <a class="p-2 text-white" href="{{ path('app_login') }}">Connexion</a>
                                 <a class="p-2 text-white" href="{{ path('app_register') }}">Inscription</a>
                             {% endif %}
@@ -46,7 +51,7 @@
                 <p class="float-right">
                     <a href="#">Haut de page</a>
                 </p>
-                <p>&copy; Digitalendar 2019</p>
+                <p> Digitalendar 2019 | Credits to Nicolas</p>
             </div>
         </footer>
         {% endblock %}
