--- a/templates/default/_event.html.twig
+++ b/templates/default/_event.html.twig
@@ -2,12 +2,12 @@
 
     <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-            <img src="{{ asset('uploads/' ~ events.picture) }}" alt="events-picture">
+            <img src="{{ asset("uploads/" ~ events.picture) }}" alt="{{ events.title }}" class="fit-image">
             <div class="card-body">
                 <h3 class="card-text">{{ events.title }}</h3>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a href="" class="btn btn-sm btn-outline-secondary">Voir</a>
+                        <a href="{{ path('event_show', {'slug': events.slug}) }}" class="btn btn-sm btn-outline-secondary">Voir</a>
                         {% if app.user == events.user or is_granted('ROLE_ADMIN')%}
                             <a href="{{ path('event_edit', {"slug": events.slug }) }}" class="btn btn-sm btn-outline-secondary">Modifier</a>
                         {% else%}
