--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -4,7 +4,7 @@
     <h1>Event</h1>
     <div class="row">
         <div class="col-md-4">
-            <img src="{{ asset("uploads/" ~ event.picture) }}" alt="events-picture" height="180px" width="300px">
+            <img src="{{ asset("uploads/" ~ event.picture) }}" alt="{{ event.title }}" class="fit-image">
         </div>
         <div class="col-md-8">
             <h1>{{ event.title }}</h1>
