--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,26 +8,26 @@
     <body>
         {% block header %}
             <header>
-                <div class="navbar navbar-dark bg-dark shadow-sm">
+                <div class="navbar shadow-sm">
                     <div class="container d-flex justify-content-between">
                         <a href="{{ path('homepage') }}" class="navbar-brand d-flex align-items-center">
                             <strong>Digitalendar</strong>
                         </a>
                         <nav class="my-2 my-md-0">
-                            <a class="p-2 text-white" href="{{ path('event_index') }}">Les événements</a>
+                            <a class="p-2 " href="{{ path('event_index') }}">Les événements</a>
 
                             {% if app.user %}
-                                <a class="p-2 text-white" href="{{ path('event_new') }}">Proposer un événement</a>
-                                <a class="p-2 text-white" href="{{ path('account') }}">Mon compte</a>
-                                <a class="p-2 text-white" href="{{ path('app_logout') }}">Déconnexion</a>
+                                <a class="p-2 " href="{{ path('event_new') }}">Proposer un événement</a>
+                                <a class="p-2 " href="{{ path('account') }}">Mon compte</a>
+                                <a class="p-2 " href="{{ path('app_logout') }}">Déconnexion</a>
                                 {% if is_granted('ROLE_ADMIN') %}
-                                    <a class="p-2 text-white" href="{{ path('easyadmin') }}">Admin</a>
+                                    <a class="p-2 admin" href="{{ path('easyadmin') }}">Admin</a>
                                 {% else %}
                                 {% endif %}
                             {% else %}
-                                <a class="p-2 text-white" href="{{ path('app_login') }}">Proposer un événement</a>
-                                <a class="p-2 text-white" href="{{ path('app_login') }}">Connexion</a>
-                                <a class="p-2 text-white" href="{{ path('app_register') }}">Inscription</a>
+                                <a class="p-2 " href="{{ path('app_login') }}">Proposer un événement</a>
+                                <a class="p-2 " href="{{ path('app_login') }}">Connexion</a>
+                                <a class="p-2 " href="{{ path('app_register') }}">Inscription</a>
                             {% endif %}
                         </nav>
                     </div>
@@ -51,7 +51,7 @@
                 <p class="float-right">
                     <a href="#">Haut de page</a>
                 </p>
-                <p> Digitalendar 2019 | Credits to Nicolas</p>
+                <p> Digitalendar 2019 | Credits to DCDEV2</p>
             </div>
         </footer>
         {% endblock %}
