--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Event{% endblock %}
 
 {% block body %}
-    <h1>Create new Event</h1>
+    <h1>Créer un événement</h1>
 
     {{ include('event/_form.html.twig') }}
 
-    <a href="{{ path('event_index') }}">back to list</a>
+    <a href="{{ path('event_index') }}">Retour à la liste</a>
 {% endblock %}
